fixes #146 alignment in recent entries/postings is off

--- a/app/View/Themed/Default/webroot/css/src/base/_slidetabs.scss
+++ b/app/View/Themed/Default/webroot/css/src/base/_slidetabs.scss
@@ -109,8 +109,8 @@
 		overflow: hidden;
 		text-overflow: ellipsis;
 
-		padding-left: 26px !important;
-		text-indent:  -1.75em;
+		padding-left: 14px !important;
+		text-indent:  -7px;
 		font-weight: normal;
 		}
 
